src/objects/CPQ_Billing_Schedule__c.object
<CustomObject>
    <description>Billing Schedules will be created when orders are created and will contain all the broken out line items from the order based on the billing frequency</description>
    <fields>
        <fullName>Bill_To_Customer_Id__c</fullName>
        <formula>CASESAFEID(Order__r.SFDC_Bill_To_Customer_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Customer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Schedule_Integration_Status__c</fullName>
        <label>Billing Schedule Integration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Ineliglible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eligible for Billing Schedule Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Schedule_Status__c</fullName>
        <label>Billing Schedule Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to ERP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoiced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Schedule_Type__c</fullName>
        <label>Billing Schedule Type</label>
        <picklist>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carving</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Effective_Date__c</fullName>
        <formula>Order__r.Contract_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Ref_Number__c</fullName>
        <formula>Order__r.Contract_Ref_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Ref #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Sign_Date__c</fullName>
        <formula>Order__r.Contract_Sign_Date__c</formula>
        <label>Contract Sign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ERP_Invoice_Number__c</fullName>
        <label>ERP Invoice Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Order_line_Number__c</fullName>
        <label>ERP Order line Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <formula>Order_Product__r.SBQQ__QuoteLine__r.CPQ_Guidewire_List_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oppty_Id__c</fullName>
        <formula>CASESAFEID(Order__r.OpportunityId)</formula>
        <label>Oppty Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <formula>Order__r.OrderNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OrderNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Order Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Order Product must be related to the Order of this Billing Schedule.</errorMessage>
            <filterItems>
                <field>$Source.Order__c</field>
                <operation>equals</operation>
                <valueField>OrderItem.OrderId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Billing Schedules</relationshipLabel>
        <relationshipName>Billing_Schedules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <formula>TEXT(Order__r.Order_Type__c)</formula>
        <label>Order Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Billing Schedules</relationshipLabel>
        <relationshipName>Billing_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Original_Order_Number__c</fullName>
        <formula>Order__r.If_Replacement_Order_Original_Order__c</formula>
        <label>Original Order #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_Clause_Date__c</fullName>
        <formula>Order__r.Out_Clause_date__c</formula>
        <label>Out Clause Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <formula>Order__r.PO_Number__c</formula>
        <label>PO #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Due__c</fullName>
        <formula>TEXT(Order__r.Payment_Due__c)</formula>
        <label>Payment Due</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Perpetual_Buyout_Option__c</fullName>
        <formula>Order__r.Perpetual_Buyout_Option__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Perpetual Buyout Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prorated_Support_Cost__c</fullName>
        <formula>Order_Product__r.SBQQ__QuoteLine__r.CPQ_Maintenance_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prorated Support Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Royalties__c</fullName>
        <formula>Order__r.CPQ_Royalties__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Royalties</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Order_End_Date__c</fullName>
        <formula>Order__r.Sales_Order_End_Date__c</formula>
        <label>Sales Order End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Software_Delivery_Date__c</fullName>
        <formula>Order__r.Software_Delivery_Date__c</formula>
        <label>Software Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Term_Duration__c</fullName>
        <formula>Order__r.Subscription_Term_Duration__c</formula>
        <label>Subscription Term Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Support_Distribution__c</fullName>
        <formula>Order_Product__r.SBQQ__QuoteLine__r.CPQ_Distribution__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Distribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Term_End_Date__c</fullName>
        <label>Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Start_Date__c</fullName>
        <label>Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Timestamp_for_Order_Upload__c</fullName>
        <formula>Order__r.Timestamp_for_Order_Upload__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timestamp for Order Upload</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>basecurr__c</fullName>
        <formula>Order__r.basecurr__c</formula>
        <label>Bill To Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billto__c</fullName>
        <formula>Order__r.Opportunity.Bill_To__r.Name</formula>
        <label>Bill To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ch_AUTO_RENEWAL__c</fullName>
        <defaultValue>&apos;Y&apos;</defaultValue>
        <label>Auto Renewal</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ch_Baseline_Measure__c</fullName>
        <defaultValue>&apos;GWP = Gross Written Premiums&apos;</defaultValue>
        <label>Baseline Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ch_Escalation_Description__c</fullName>
        <defaultValue>&apos;Lesser of CPI or 3%&apos;</defaultValue>
        <label>Escalation Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ch_Escalation_Effective_Period__c</fullName>
        <formula>Order__r.ch_Escalation_Effective_Period__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ch_Escalation_on_Fees__c</fullName>
        <defaultValue>&apos;Y&apos;</defaultValue>
        <label>Escalation on Fees</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ch_Growth_Rate_Buffer__c</fullName>
        <defaultValue>&apos;&gt;0%&apos;</defaultValue>
        <label>Growth Rate Buffer</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ch_Growth_Rate_Clause__c</fullName>
        <defaultValue>&apos;Y&apos;</defaultValue>
        <label>Growth Rate Clause included in contract?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ch_License_Type__c</fullName>
        <formula>Order__r.ch_License_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ch_Notification_Period__c</fullName>
        <label>Notification Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ch_Notification_Required__c</fullName>
        <defaultValue>&apos;N&apos;</defaultValue>
        <label>Notification Required?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ch_Perpetual_Buyout_Option__c</fullName>
        <defaultValue>&apos;N&apos;</defaultValue>
        <label>Contract has Perpetual Buyout Option?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ch_Reduction_Rate_Buffer__c</fullName>
        <label>Reduction Rate Buffer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ch_Reduction_Rate_Clause__c</fullName>
        <defaultValue>&apos;N&apos;</defaultValue>
        <label>Reduction Rate Clause incl. in contract?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ch_Term_Years__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Number of Term Year</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ch_Warranty_Period__c</fullName>
        <defaultValue>&apos;365 days from Notification Date&apos;</defaultValue>
        <label>Warranty Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currency__c</fullName>
        <formula>Order__r.currency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customerid__c</fullName>
        <formula>Order__r.customerid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participant ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datecreated__c</fullName>
        <formula>Order__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Order Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>departmentid__c</fullName>
        <defaultValue>&apos;310&apos;</defaultValue>
        <label>Intacct Department Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eom__c</fullName>
        <defaultValue>&apos;FALSE&apos;</defaultValue>
        <label>Intacct EOM</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>exchratetype__c</fullName>
        <defaultValue>&apos;Intacct Daily Rate&apos;</defaultValue>
        <label>Exchange Rate Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>itemdesc_original__c</fullName>
        <label>SKU Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>itemid__c</fullName>
        <label>SKU ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>l_classid__c</fullName>
        <formula>Order__r.l_classid__c</formula>
        <label>Bill TO Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>l_customerid__c</fullName>
        <formula>Order__r.l_customerid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participant ID 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>l_employeeid__c</fullName>
        <formula>Order_Product__r.l_employeeid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>locationid__c</fullName>
        <formula>Order__r.locationid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intacct Company Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>memo__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>modenew__c</fullName>
        <defaultValue>&apos;none&apos;</defaultValue>
        <label>Intacct Mode New</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>price__c</fullName>
        <label>Price</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>referenceno__c</fullName>
        <formula>Order__r.referenceno__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revrecenddate__c</fullName>
        <label>Revenue Recognition End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>revrecstartdate__c</fullName>
        <label>Revenue Recognition Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>revrectemplate__c</fullName>
        <label>Revenue Recognition Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shippingmethod__c</fullName>
        <defaultValue>&apos;Electronically Delivered Software&apos;</defaultValue>
        <label>Shipping Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shipto__c</fullName>
        <formula>Order__r.Opportunity.Ship_To__r.Name</formula>
        <label>Ship To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>startdate__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>termname__c</fullName>
        <label>Payment Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transactiontype__c</fullName>
        <defaultValue>&apos;Automated Sales Order&apos;</defaultValue>
        <label>Sales Order Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unit__c</fullName>
        <defaultValue>&apos;Each&apos;</defaultValue>
        <label>Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Billing Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BS-{000000}</displayFormat>
        <label>Billing Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Billing_Schedule_Status_VR1</fullName>
        <active>true</active>
        <description>The Billing Schedule Status can be changed to “Terminated” only if the Billing Schedule Status was either &quot;Draft&quot; or “Submitted to ERP”</description>
        <errorConditionFormula>AND(ISPICKVAL( Billing_Schedule_Status__c, &quot;Terminated&quot;),AND(NOT(ISPICKVAL(PRIORVALUE( Billing_Schedule_Status__c) , &quot;Terminated&quot;)),NOT(ISPICKVAL(PRIORVALUE( Billing_Schedule_Status__c) , &quot;Draft&quot;)),NOT(ISPICKVAL(PRIORVALUE( Billing_Schedule_Status__c) , &quot;Submitted to ERP&quot;))))</errorConditionFormula>
        <errorMessage>The Billing Schedule Status can be changed to “Terminated” only if the Billing Schedule Status was either &quot;Draft&quot; or “Submitted to ERP”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_Schedule_Status_VR2</fullName>
        <active>true</active>
        <description>The Billing Schedule Status can NOT be changed after being “Terminated”</description>
        <errorConditionFormula>AND(NOT(ISPICKVAL(Billing_Schedule_Status__c, &quot;Terminated&quot;)),ISPICKVAL(PRIORVALUE( Billing_Schedule_Status__c) , &quot;Terminated&quot;))</errorConditionFormula>
        <errorMessage>The Billing Schedule Status can NOT be changed after being “Terminated”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_Schedule_Type_VR</fullName>
        <active>true</active>
        <description>The Billing Schedule Status can NOT be changed if current value is “Billing”</description>
        <errorConditionFormula>AND(NOT(ISPICKVAL(Billing_Schedule_Type__c, &quot;Billing&quot;)),ISPICKVAL(PRIORVALUE( Billing_Schedule_Type__c) , &quot;Billing&quot;))</errorConditionFormula>
        <errorMessage>The Billing Schedule Status can NOT be changed if current value is “Billing”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Price_less_than_zero</fullName>
        <active>true</active>
        <description>Should display an error when price is less than 0.</description>
        <errorConditionFormula>price__c &lt; 0</errorConditionFormula>
        <errorDisplayField>price__c</errorDisplayField>
        <errorMessage>The price cannot be negative.</errorMessage>
    </validationRules>
</CustomObject>